--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@hotwired/turbo-rails": "^7.3.0",
     "@rails/actiontext": "^7.0.5",
     "esbuild": "^0.18.4",
-    "sass": "^1.63.4",
-    "trix": "^2.0.5"
+    "rhino-editor": "^0.6.1",
+    "sass": "^1.63.4"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
