--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^8.0.0",
     "@rails/actiontext": "^8.0.0",
-    "esbuild": "^0.24.4",
+    "esbuild": "^0.24.0",
+    "prosemirror-inputrules": "^1.2.0",
+    "prosemirror-model": "^1.18.1",
+    "prosemirror-state": "^1.4.1",
     "rhino-editor": "^0.14.2",
-    "sass": "^1.82.2"
+    "sass": "^1.82.0"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
